fix problems with date 1 day behind

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Bahnschrift", sans-serif; }
 
 .snackbar {
-    width: 500px;
-    height: 60px;
+    min-width: 500px;
+    height: auto;
     font-size: 30px !important;
     background: #7ac876;
     color: black;
@@ -22,6 +22,7 @@ body { margin: 0; font-family: Roboto, "Bahnschrift", sans-serif; }
     background: #68b364;
     color: black;
     transition: 0.3s all ease;
+    margin:auto;
   }
 
   .snackbar .mat-simple-snackbar-action:hover {
